fixed lines in tiers not being aligned

--- a/src/style.css
+++ b/src/style.css
@@ -14,20 +14,17 @@ body {
 
 /* TIER LIST */
 .TierList {
-    border: 1px solid rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
 }
 
 .TierListHeader {
-    border: 1px solid rgb(31, 23, 31);
     padding: 10px 10px 0px 10px;
     display: flex;
     flex-direction: column;
 }
 
 .TierListContainer {
-    border: 1px solid rgb(173, 19, 187);
     padding: 10px 10px 10px 10px;
     display: flex;
     justify-content: center;
@@ -36,7 +33,6 @@ body {
 .TierCard {
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
     padding: 25px 35px 25px 35px;
     min-height: 800px;
     width: 500px;
@@ -58,6 +54,7 @@ body {
 
 .TierCardBodyLine {
     border-bottom: 1px solid rgb(59, 59, 59);
+    height: 125px;
     padding: 20px;
     display: flex;
     text-align: center; 
@@ -65,20 +62,17 @@ body {
 
 /* INFERENCE LIST */
 .InferenceTierList {
-    border: 1px solid rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
 }
 
 .InferenceTierListHeader {
-    border: 1px solid rgb(31, 23, 31);
     padding: 10px 10px 0px 10px;
     display: flex;
     flex-direction: column;
 }
 
 .InferenceTierListContainer {
-    border: 1px solid rgb(173, 19, 187);
     padding: 10px 10px 10px 10px;
     display: flex;
     justify-content: center;
@@ -87,7 +81,6 @@ body {
 .InferenceTierCard {
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
     padding: 25px 35px 25px 35px;
     min-height: 800px;
     width: 500px;
@@ -108,6 +101,7 @@ body {
 }
 
 .InferenceTierCardText {
+    height: 100px;
     text-align: center;
     font-size: 20px;
 }
@@ -120,21 +114,18 @@ body {
 
 /* TIER LIST */
 .ContactInfo {
-    border: 1px solid yellow;
     display: flex;
     flex-direction: column;
     height: 50vh;
 }
 
 .ContactInfoHeader {
-    border: 2px solid rgb(179, 25, 76);
     padding: 10px 10px 0px 10px;
     display: flex;
     flex-direction: column;
 }
 
 .ContactInfoContents {
-    border: 1px solid rgb(170, 187, 18);
     padding: 10px 10px 10px 10px;
     display: flex;
     flex-direction: column;
